@startuml
skinparam backgroundColor #FFFFFF
skinparam shadowing false
skinparam roundcorner 8
skinparam defaultFontName Arial
skinparam ArrowColor #344054
skinparam class {
  BorderColor #344054
  FontColor #101828
  BackgroundColor #F9FAFB
}
title Class structure — Ingest telemetry

class TelemetryPoint <<record>> {
  +string DeviceId
  +string Metric
  +double Value
  +DateTimeOffset Timestamp
}

class WorkerOptions {
  +string MqttBroker
  +string MqttTopicFilter
  +string CouchbaseConnectionString
  +string CouchbaseUsername
  +string CouchbasePassword
  +string CouchbaseBucket
  +string RedisConnectionString
}

class TelemetryIngestionWorker {
  +ExecuteAsync(token: CancellationToken): Task
  -PumpAsync(persist: ChannelWriter<TelemetryPoint>, live: ChannelWriter<TelemetryPoint>, token): Task
  -ConsumeAsync(reader: ChannelReader<TelemetryPoint>, handle, token): Task
}

class MqttTelemetrySource {
  +RunAsync(token: CancellationToken): Task
  +Messages(token: CancellationToken): IAsyncEnumerable<ReadOnlyMemory<byte>>
}

class TelemetryPointParser {
  +Parse(payload: ReadOnlyMemory<byte>): ParseResult
}

class CouchbaseTimeSeriesWriter {
  +AppendAsync(point: TelemetryPoint, token: CancellationToken): Task
  -UpsertBucketAsync(key: TimeSeriesDocumentKey, point: TelemetryPoint, token): Task
}

class TimeSeriesDocumentKey <<record>> {
  +string DeviceId
  +string Metric
  +DateTimeOffset HourStart
  +{static} For(point: TelemetryPoint): TimeSeriesDocumentKey
}

class TimeSeriesDocument <<document>> {
  +string deviceId
  +string metric
  +long ts_start
  +long ts_end
  +[epochMillis, value][] ts_data
}

class RedisTelemetryPublisher {
  +PublishAsync(point: TelemetryPoint, token: CancellationToken): Task
}

TelemetryIngestionWorker --> WorkerOptions : reads
TelemetryIngestionWorker ..> MqttTelemetrySource : controls
TelemetryIngestionWorker ..> TelemetryPointParser : validates with
TelemetryIngestionWorker ..> CouchbaseTimeSeriesWriter : persists through
TelemetryIngestionWorker ..> RedisTelemetryPublisher : publishes through
TelemetryPointParser ..> TelemetryPoint : creates
CouchbaseTimeSeriesWriter ..> TelemetryPoint : appends
CouchbaseTimeSeriesWriter ..> TimeSeriesDocumentKey : derives
CouchbaseTimeSeriesWriter ..> TimeSeriesDocument : creates / appends
RedisTelemetryPublisher ..> TelemetryPoint : publishes

note bottom of TimeSeriesDocument
  Irregular time series format: ts_data holds
  [epochMillis, value] pairs; ts_start / ts_end are
  the fixed hourly bucket bounds in epoch milliseconds.
  deviceId and metric enable SQL++ filtering.
end note
@enduml
